# Password-Manager

./: .env  .gitignore  CMakeLists.txt  README.md  app.js  package-lock.json  package.json
backend/: .gitignore  CMakeLists.txt  package-lock.json  package.json
backend/C++/: CMakeLists.txt
backend/C++/encryption/: decoder.hpp  passwordManager.cpp  passwordManager.hpp
backend/C++/wrappers/: passwordManagerWrapper.cpp  passwordManagerWrapper.hpp
backend/src/: CMakeLists.txt  app.js  server.js
backend/src/C++/encryption/: decoder.cpp  encoder.cpp  passwordManager.hpp
backend/src/C++/encryption/AES/: encryption.cpp  encryption.hpp
backend/src/C++/wrappers/: EncryptionWrapper.cpp  EncryptionWrapper.hpp  passwordManagerWrapper.cpp
backend/src/config/: DBConnection.js  allowedOrigins.js  corsOptions.js
backend/src/controllers/: authController.js  guestController.js  passwordController.js  userController.js  validationController.js
backend/src/encryption/: encryption.js
backend/src/middleware/: logger.js  verifyJWT.js
backend/src/models/: Guest.js  Password.js  User.js
backend/src/routes/: authRoutes.js  dashboard.js  dashboardRoutes.js  guestRoutes.js  login.js  passwordRoutes.js  register.js  registerRoutes.js  user.js  userRoutes.js  validateRoutes.js
backend/src/utils/: binding.js  email.js  emailMessage.ejs  serverUtils.js
client/: localhost-key.pem  localhost.pem  package-lock.json  package.json
config/: DBConnection.js
src/encryption/: CMakeLists.txt  constant.hpp  decoder.cpp  encoder.cpp  encoder.hpp  passwordManager.cpp  passwordManager.hpp
(+177 files in other folders)
